# hrpc

./: .gitignore  .gitmodules  Cargo.toml  config.example.toml
hrpc/: Cargo.toml
hrpc/src/: config.rs  lib.rs  reading.rs  template.rs
hrpc/src/file/: mod.rs
hrpc/src/logging/: mod.rs
hrpc/src/monitor/: mod.rs
hrpc/src/osc/: mod.rs
hrpc/src/rpc/: mod.rs
hrpc_gui/: Cargo.toml
hrpc_gui/src/: app.rs  graph.rs  lib.rs  main.rs
src/: main.rs
src/file/: mod.rs
src/logging/: mod.rs
src/monitor/: mod.rs
src/osc/: mod.rs
src/rpc/: mod.rs
